--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.17",
     "tesseract.js": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
